# hyperv-memproc-dll-injection-poc

./: CMakeLists.txt  README.md
Ideas/: code_cave_finder.h  hook_manager.h  hook_shellcode.h  relocation_tracker.h
main/: bridge.cpp  injection.h  pe_mapper.h  shellcode.h  test_dll.cpp
